--- a/index.html
+++ b/index.html
@@ -174,6 +174,31 @@
       #output{ padding:12px 14px; }
       .input-row{ padding:10px 14px; }
     }
+
+       /* ── THEME TOGGLE BUTTON ── */
+    #theme-toggle {
+      background: none;
+      border: 1px solid var(--border);
+      border-radius: 20px;
+      color: var(--muted);
+      font-family: inherit;
+      font-size: 11px;
+      padding: 3px 10px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      transition: border-color 0.2s, color 0.2s, background 0.2s;
+      flex-shrink: 0;
+      letter-spacing: 0.03em;
+    }
+    #theme-toggle:hover {
+      border-color: var(--green);
+      color: var(--green);
+      background: rgba(57,255,20,0.05);
+    }
+    .toggle-icon { font-size: 13px; line-height: 1; }
+    
   </style>
 </head>
 <body>
@@ -196,6 +221,29 @@
 <script>
 const output = document.getElementById('output');
 const input  = document.getElementById('cmd-input');
+
+// ── THEME ─────────────────────────────────────────────────────────────────────
+let isLight = false;
+const toggleBtn   = document.getElementById('theme-toggle');
+const toggleIcon  = toggleBtn.querySelector('.toggle-icon');
+const toggleLabel = toggleBtn.querySelector('.toggle-label');
+
+function applyTheme(light) {
+  isLight = light;
+  document.documentElement.classList.toggle('light', light);
+  toggleIcon.textContent  = light ? '☀️' : '🌙';
+  toggleLabel.textContent = light ? 'light' : 'dark';
+  localStorage.setItem('levax-theme', light ? 'light' : 'dark');
+}
+
+// Restore saved preference
+applyTheme(localStorage.getItem('levax-theme') === 'light');
+
+toggleBtn.addEventListener('click', (e) => {
+  e.stopPropagation(); // don't re-focus input weirdly
+  applyTheme(!isLight);
+  input.focus();
+});
 
 // ── DATA ──────────────────────────────────────────────────────────────────────
 const DATA = {
@@ -402,7 +450,7 @@ const COMMANDS = {
 async function boot() {
   input.disabled = true;
 
-  await typewrite('Initializing levax.portfolio v1.0.0...', 'muted');
+  await typewrite('Initializing levax.portfolio v1.1.0...', 'muted');
   await new Promise(r => setTimeout(r, 300));
   await typewrite('Loading modules... [ OK ]', 'ok');
   await new Promise(r => setTimeout(r, 200));
